[gd_scene load_steps=5 format=3 uid="uid://7ejae0fv7k3i"]

[ext_resource type="Texture2D" uid="uid://dpclxv5p8m74q" path="res://assets/PNG/Default size/Ships/ship (2).png" id="1_3n5wm"]
[ext_resource type="Script" path="res://scripts/enemy_ship.gd" id="1_tcg4t"]
[ext_resource type="AudioStream" uid="uid://c6p5lj4b3efgx" path="res://assets/Sounds/cannon fire.wav" id="3_615vj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sj36w"]
size = Vector2(35.9999, 88)

[node name="EnemyShip" type="CharacterBody2D"]
rotation = 3.14417
script = ExtResource("1_tcg4t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_3n5wm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sj36w")

[node name="MarkerLeft" type="Marker2D" parent="."]
position = Vector2(16.0283, 10.9588)

[node name="MarkerRight" type="Marker2D" parent="."]
position = Vector2(-16.9716, 11.0437)

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FireSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_615vj")
